TA-1987 fix results list shift with zip code error (#831)
* TA-1987 add bottom padding to search bar

* TA-1987 only include padding for desktop

* TA-1987 accommodation for firefox browser

--- a/src/client/components/pages/event-lookup-page/event-lookup-page.scss
+++ b/src/client/components/pages/event-lookup-page/event-lookup-page.scss
@@ -20,6 +20,10 @@
       margin-top: 0;
     }
   }
+
+  @include grid-media($sba-grid-large) {
+    padding-bottom: 195px;
+  }
 }
 
 // Fields
